# planilhador-demonstracoes

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCUMENTACAO_COMPLETA.md  Dockerfile  PLANO_EVOLUCAO.md  README.md  SESSION_LOG.md  cli.py  mcp_server.py  pyproject.toml  railway.toml  requirements.txt  run.py
app/: config.py  jobs.py  main.py
app/models/: conta_contabil.py  database.py  documento.py
app/prompts/: system_balancete_gemini.txt  system_balancete_refine.txt  system_balanco_format.txt  system_classifier.txt  system_demonstracao_gemini.txt  system_dre_format.txt
app/routes/: progress.py  results.py  upload.py
app/services/: adobe_ocr.py  anthropic_client.py  classifier.py  exporter.py  formatter.py  gemini_client.py  pipeline.py  validator.py
app/utils/: pdf_utils.py
app/vba/: build_template.py  template.xlsm
controladoria_core/: __init__.py  orchestrator.py
controladoria_core/agents/: __init__.py  gemini_agent.py
controladoria_core/exporters/: __init__.py  hierarchy.py  reference_extractor.py  sign_logic.py  xlsx_builder.py
knowledge/: VFR_Sistemas.json  VFR_Sistemas.txt
projeto_analise/: TEST_RESULTS.md  app.py  main.py  requirements.txt  test_classifier_pipeline.py  test_detailed_analysis.py  test_orchestrator_integration.py
projeto_balancetes/: .gitignore  CLAUDE.md  README.md  RESUMO_PROJETO.md  SESSION_LOG.md  app.py  main.py  requirements.txt  test_xlsx_builder.py
projeto_balancetes_CLI/: cli.py
static/: app.js  index.html  style.css
tests/: test_exporter.py  test_formatter.py  test_validator.py
(+57 files in other folders)
